--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@openrouter/sdk": "^0.3.11",
     "baileys": "^7.0.0-rc.9",
+    "dotenv": "^17.2.3",
+    "openai": "^6.15.0",
     "pino": "^10.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
