--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "dependencies": {
     "@openrouter/sdk": "^0.3.11",
     "baileys": "^7.0.0-rc.9",
+    "canvas": "^3.2.0",
     "dotenv": "^17.2.3",
+    "jsqr": "^1.4.0",
     "openai": "^6.15.0",
     "pino": "^10.1.0",
+    "pngjs": "^7.0.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.6",
     "@types/qrcode-terminal": "^0.12.2"
   }
 }
